[package]
name = "packet_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.4.0"
log = "0.4.17"
tokio = { version = "1.28.2", features = ["full"] }
async-trait = "0.1.58"
num-bigint = "0.4"
num-traits = "0.2"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.81"
hematite-nbt = { git = "https://github.com/PistonDevelopers/hematite_nbt" }

[features]
default = []