[package]
name = "pandora_utils"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.1.0"
serde_json = "1.0.81"
serde = { version = "1.0.136", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
log = "0.4.17"
thiserror = "1.0.31"
hematite-nbt = { git = "https://github.com/PistonDevelopers/hematite_nbt" }

# Custom crates
packet_manager = { path = "../packet_manager" }