[package]
name = "pandoranet"
version = "0.1.0"
edition = "2021"

[dependencies]
dashmap = "6.1.0"
lazy_static = "1.4.0"
tokio = { version = "1.28.2", features = ["full"] }
uuid = { version = "1.4.1", features = ["v4"] }
rand = "0.8.5"
serde_json = "1.0.81"
log = "0.4.17"
bytes = "1.4.0"

# Custom crates
pandora_utils = { path = "../pandora_utils" }
pandora_macros = { path = "../pandora_macros" }
packet_manager = { path = "../packet_manager" }

[features]
default = []